deployments/epp/prod/multitenancy-gateway/gatewayclass.yaml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: epp-server-gateway-prod
  namespace: epp--prod
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: epp-server-gateway-prod
    namespace: epp--prod
