deployments/epp/prod/multitenancy-gateway/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: epp-server-gateway
  namespace: epp--prod
spec:
  gatewayClassName: epp-server-gateway-prod
  listeners:
  - name: http
    protocol: HTTP
    port: 80
