deployments/epp/prod/multitenancy-gateway/bpc.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: bpc-server
  namespace: epp--prod
  annotations:
    konghq.com/preserve-host: "false"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: epp-server-gateway
    namespace: epp--prod
  rules:
  - backendRefs:
    - name: epp-server
      namespace: epp--biophysics-colab
      kind: Service
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /bpc
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
